Fix background chessboard visibility and increase spacing between intersection statement and brands list

--- a/style.css
+++ b/style.css
@@ -37,7 +37,7 @@ body {
     display: flex;
     flex-direction: column;
     line-height: 1.6;
-    background-color: #030408;
+    background-color: transparent;
 }
 
 /* Zooming Chessboard Background Container */
@@ -47,7 +47,7 @@ body {
     left: -10%;
     width: 120%;
     height: 120%;
-    z-index: -2;
+    z-index: -1;
     pointer-events: none;
     background-color: #030408;
     background-image: 
